# GantryMQ

./: .gitignore  CMakeLists.txt  INSTALL_SERVER.md  README.md  environment.yml  environment_client.yaml  environment_server.yml  flake.nix  pyproject.toml  reset_gpio.sh
config/dummy/: README.md  camera.json  drs.json  gcoder.json  port.json  rigol.json  senaux_dummy.json
config/server/: HVLV_dummy.json  HVLV_example.json  SenAUX_example.json  camera.json  drs.json  gcoder.json  rigol.json
doc/: README.md  aux_board.md  client_install_and_run.md  config_server.md  install_local_testing.md  install_server.md  local.md  troubleshooting.md
src/gmqclient/: HVLV_methods.py  SenAUX_methods.py  __init__.py  camera_methods.py  drs_methods.py  gcoder_methods.py  rigol_methods.py  server  zmq_client.py
src/gmqserver/: HVLV_methods.py  SenAUX_methods.py  __init__.py  camera_methods.py  create_systemd_service.py  deploy.py  digi_methods.py  drs_methods.py  gcoder_methods.py  rigol_methods.py  run_server.py  zmq_server.py
src/hardware/: drs.cc  gcoder.cc  gpio.cc  i2c_ads1115.cc  i2c_mcp4725.cc  logger.hpp  sysfs.cc  sysfs.hpp  threadsleep.hpp
tests/docker/: Dockerfile  bashrc.sh  requirements.txt
tests/hardware/: drs.py  gcoder.py  gpio.py  i2c_ads1115.py  i2c_mcp4725.py
tests/local/: gpio.py  i2c_ads1115.py
