[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gmqclient"
authors = [{ name = "Yi-Mu Chen", email = "yimuchen@umd.edu" }]
dependencies = [
  "opencv-python",
  "pyzmq",
  "scipy",
  "pyvisa-py",
  "zeroconf",
  "pyusb",
]
dynamic = ["version"]

### The following is for the construction of the package using hatchling
[tool.hatch.version]
source = "vcs"
path = "src/gmqclient/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/gmqclient/version.py"

[tool.setuptools_scm]
write_to = "src/gmqclient/_version.py"
